Fix: added z-index:1 to hero content so it displays on top of the transprent color

--- a/component-library/components/sections/hero/hero.scss
+++ b/component-library/components/sections/hero/hero.scss
@@ -22,6 +22,7 @@
     object-position: 50% 50%;
   }
   &__content {
+    z-index:1;
     display: grid;
     gap: 1.5rem;
     grid-row: 1 / -1;
